# upnp-control

./: .gitignore  Makefile  README.md  TODO.md  httpd.c  httpd.h  network.c  network.h  upnp.c  upnp.h  upnp_control.c
doc/payloads/: MusicControl1_req.xml
esp-firmware/: CMakeLists.txt  Doxyfile.in  Makefile  README.md  httpd.c  prj.conf  upnp_control.c
esp-firmware-rtos/: Makefile  httpd.h  network.c  upnp.c  upnp.h  upnp_control.c
esp-firmware-rtos/fsdata/: makefsdata
esp-firmware-rtos/fsdata/fs/: musiccontrol_res.xml
esp-firmware/fsdata/: index.html
esp-firmware/fsdata/fs/: musiccontrol_res.ssi
esp-firmware/src/: httpd.c  httpd.h  main.c  network.c  network.h  ssdp.c  ssdp.h  upnp.c  upnp.h
fsdata/fs/: 404.html  music.xml  root.xml
tests/: pom.xml
tests/src/test/java/feature/: RenderingControlTest.java
tests/src/test/resources/feature/: rendering_control.feature
